# cave

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  doc.yml  e2e.yml  pr.yml  release.yml  unitest.yml
assets/: index.html
docs/: dev.md  man.md  telemetry.md
man/: cave.1
proto/: cave_telem.proto
src/: cli.rs  config.rs  docker.rs  main.rs  manage.rs  telemetry.rs
tests/: scenarios.rs
tools/: install.sh
