[package]
name = "cave"
version = "0.1.2"
authors = ["Simvia <basile.marchand@simvia.tech>"]
edition = "2021"
description = "CLI for managing code_aster versions"
license = "MIT"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.5.21", features = ["derive"] }
anyhow = "1.0"
regex = "1.11.1"
dirs = "6.0.0"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
term_size = "0.3"
colored = "2.0"
chrono = "0.4"
chrono-tz = "0.8"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.28"
env_logger = "0.11.8"

[build-dependencies]
clap = { version = "4.5.21", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2.29"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.5"

[package.metadata.deb]
assets = [
    ["target/release/cave", "usr/bin/", "755"],
    ["man/cave.1", "usr/share/man/man1/", "644"]
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/cave", dest = "/usr/bin/", mode = "755" },
    { source = "man/cave.1", dest = "/usr/share/man/man1/", mode = "644" }
]
